Insights Release 9.1 changes